# fastapi-blog-api

./: alembic.ini  pyproject.toml
src/: manage.py
src/app/: config.py  main.py
src/app/api/: __init__.py  app.py
src/app/api/router/: v1.py
src/app/api/v1/: __init__.py  router.py
src/app/blog/: __init__.py
src/app/blog/models/: author.py
src/app/blog/schemes/: __init__.py  author.py
src/app/blog/services/: __init__.py  author.py
src/app/blog/v1/: __init__.py  router.py
src/app/blog/v1/views/: author.py
src/app/common/: dependencies.py
src/app/core/: app.py
src/app/database/: __init__.py  base.py  models.py  session.py
src/app/schemas/: __init__.py  base.py
src/migrations/: env.py
src/migrations/versions/: ebac6e5307c4_.py
